--- a/.github/workflows/blankk.yml
+++ b/.github/workflows/blankk.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Download Ngrok & NSSM
       run: |
         Invoke-WebRequest https://github.com/jetushack4/FREE-RDP-US/blob/master/Files/ngrok32.exe -OutFile ngrok.exe
-        https://github.com/jetushack4/FREE-RDP-US/blob/master/Files/ngrok64.exe -OutFile ngrok64.exe
+        Invoke-WebRequest https://github.com/jetushack4/FREE-RDP-US/blob/master/Files/ngrok64.exe -OutFile ngrok64.exe
         Invoke-WebRequest https://github.com/jetushack4/FREE-RDP-US/blob/master/Files/nssm.exe -OutFile nssm.exe
     - name: Copy NSSM & Ngrok to Windows Directory.
       run: | 
