--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,11 +24,11 @@ jobs:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Download Important Files.
       run: |
-        Invoke-WebRequest https://github.com/jetushack4/FREE-RDP-US/blob/master/Files/NGROK-US.bat -OutFile NGROK-US.bat
+        Invoke-WebRequest https://github.com/jetushack4/FREE-RDP-US/blob/master/Files/NGROK-US.bat -OutFile NGROK-AP.bat
         Invoke-WebRequest https://github.com/jetushack4/FREE-RDP-US/blob/master/Files/NGROK-CHECK.bat -OutFile NGROK-CHECK.bat
         Invoke-WebRequest https://github.com/jetushack4/FREE-RDP-US/blob/master/Files/loop.bat -OutFile loop.bat
     - name: Make YML file for NGROK.
-      run: start NGROK-US.bat
+      run: start NGROK-AP.bat
     - name: Enable RDP Access.
       run: | 
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
