--- a/.github/workflows/blankk.yml
+++ b/.github/workflows/blankk.yml
@@ -19,7 +19,7 @@ jobs:
         copy nssm.exe C:\Windows\System32
         copy ngrok.exe C:\Windows\System32
     - name: Connect your NGROK account
-      run: .\ngrok.exe authtoken 24gADZqbxaCW6T8IJ34kOrZKJRG_3mhS6D994z7B7sVMowhWs
+      run: .\ngrok\ngrok.exe authtoken 24gADZqbxaCW6T8IJ34kOrZKJRG_3mhS6D994z7B7sVMowhWs
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Download Important Files.
